k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neotropolis
  labels:
    name: neotropolis
    environment: production
