k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neobank-service
  namespace: neotropolis
  labels:
    app: neobank
spec:
  type: ClusterIP
  selector:
    app: neobank
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800  # 3 hours
